fix(patreon): payment window is too small to fit alipay interface

--- a/content/panorama/layout/custom_game/common/patreon/patreon.css
+++ b/content/panorama/layout/custom_game/common/patreon/patreon.css
@@ -593,7 +593,7 @@
 #PaymentWindow {
 	align: center center;
 	margin-bottom: 110px;
-	width: 450px;
+	width: 960px;
 	flow-children: down;
 	background-color: #444;
 	border-radius: 3px;
@@ -604,7 +604,7 @@
 #PaymentWindowLoader,
 #PaymentWindowError {
 	width: 100%;
-	height: 500px;
+	height: 575px;
 	margin-bottom: 15px;
 }
 
